--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "bootstrap": "^4.2.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-native-elements": "^1.0.0",
+    "react-rating": "^1.6.2",
+    "react-scripts": "2.1.3",
+    "react-star-ratings": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
