--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-native-elements": "^1.0.0",
     "react-rating": "^1.6.2",
     "react-scripts": "2.1.3",
-    "react-star-ratings": "^2.3.0"
+    "react-star-ratings": "^2.3.0",
+    "react-test-renderer": "^16.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
